<resources>
    <string name="app_name">unsurv-mapping</string>

    <!--bottom navigation-->
    <string name="title_home">Map</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>

    <!--in EditCamera-->
    <string name="title_edit_camera">Edit Camera:</string>
    <string name="type_text">Type:</string>
    <string name="area_text">Area:</string>
    <string name="mount_text">Mounted on:</string>
    <string name="direction_text">Direction:</string>
    <string name="height_text">Height (m):</string>
    <string name="timestamp_not_available">not available</string>
    <string name="no_comment">no comments available</string>
    <string name="timestamp_text">Camera captured on:</string>
    <string name="upload_text">Camera upload on:</string>
    <string name="comment_text">Comments:</string>
    <string name="angle_text">Angle (from horizontal):</string>
    <string name="sign_text">Sign present:</string>
    <string name="complete_sign_text">Sign with correct info:</string>
    <string name="sign_status_no_info">no info</string>
    <string name="sign_status_yes">YES</string>
    <string name="sign_status_no">NO</string>
    <string name="edit_button">EDIT LOCATION</string>
    <string name="save_button">SAVE &amp; GO</string>

    <!--in HistoryActivity-->
    <string name="dont_ask_again">Don\'t ask again</string>
    <string name="permanently_delete_camera">Permanently delete this camera?</string>
    <string name="history_type_text">Type: %s</string>
    <string name="history_area_text">Area: %s</string>
    <string name="history_training_text">Training Capture</string>
    <string name="history_upload_text">Upload: %s</string>
    <string name="history_timestamp_text">Captured at: %s</string>

    <!--in OrganizeActivity-->

    <string name="organize_lock_grid">Lock grid + map:</string>
    <string name="organize_center_lat">Center latitude:</string>
    <string name="organize_center_lon">Center longitude:</string>
    <string name="organize_y_size">Height (m):</string>
    <string name="organize_x_size">Length (m):</string>
    <string name="organize_rows">Rows:</string>
    <string name="organize_columns">Columns:</string>
    <string name="organize_offline">Offline mode:</string>

    <string name="organize_reset_button">reset</string>
    <string name="organize_draw_button">Draw Grid</string>
    <string name="organize_export">EXPORT</string>

    <string name="organize_hint_lat">Latitude</string>
    <string name="organize_hint_lon">Longitude</string>
    <string name="organize_hint_length">Length</string>
    <string name="organize_hint_height">Height</string>
    <string name="organize_hint_rows">Rows</string>
    <string name="organize_hint_columns">Columns</string>
    <string name="organize_hint_offline">offline mode</string>

</resources>