<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="org.unsurv.unsurv_mapping.ui.home.EditCameraFragment">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        />


    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/edit_camera_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="10">

            <org.osmdroid.views.MapView
                android:id="@+id/edit_camera_map"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </org.osmdroid.views.MapView>


            <TextView
                android:id="@+id/cheat_center_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                />

            <ImageView
                android:id="@+id/edit_camera_center_marker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/standard_camera_marker_5_dpi"
                android:layout_above="@id/cheat_center_view"
                android:layout_centerHorizontal="true"
                android:visibility="gone"/>

            <ImageButton
                android:id="@+id/edit_camera_reset_map_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_restore_grey_24dp" />

        </RelativeLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="8"
            android:scrollbarSize="6dp"
            android:fadeScrollbars="false">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:text="@string/type_text"
                        android:layout_marginEnd="4dp"
                        android:gravity="end|center_vertical"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:text="@string/direction_text"
                        android:layout_marginEnd="4dp"
                        android:gravity="end|center_vertical"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:text="@string/area_text"
                        android:layout_marginEnd="4dp"
                        android:gravity="end|center_vertical"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:text="@string/height_text"
                        android:layout_marginEnd="4dp"
                        android:gravity="end|center_vertical"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:text="@string/mount_text"
                        android:layout_marginEnd="4dp"
                        android:gravity="end|center_vertical"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:text="@string/angle_text"
                        android:layout_marginEnd="4dp"
                        android:gravity="end|center_vertical"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:text="@string/timestamp_text"
                        android:layout_marginEnd="4dp"
                        android:gravity="end|center_vertical"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:text="@string/sign_text"
                        android:layout_marginEnd="4dp"
                        android:gravity="end|center_vertical"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:text="@string/complete_sign_text"
                        android:layout_marginEnd="4dp"
                        android:gravity="end|center_vertical"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:layout_marginStart="4dp"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/edit_camera_type_selection"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:gravity="start|center_vertical"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:orientation="horizontal">

                        <SeekBar
                            android:id="@+id/edit_camera_direction_seekbar"
                            android:layout_width="0sp"
                            android:layout_weight="7"
                            android:layout_height="match_parent"
                            />

                        <TextView
                            android:id="@+id/edit_camera_direction_text"
                            android:layout_width="0sp"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:textSize="24sp"
                            android:layout_height="44dp"/>


                    </LinearLayout>



                    <Spinner
                        android:id="@+id/edit_camera_area_selection"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:gravity="start|center_vertical"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:orientation="horizontal">

                        <SeekBar
                            android:id="@+id/edit_camera_height_seekbar"
                            android:layout_width="0sp"
                            android:layout_weight="7"
                            android:layout_height="match_parent"
                            />

                        <TextView
                            android:id="@+id/edit_camera_height_text"
                            android:layout_width="0sp"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:textSize="24sp"
                            android:layout_height="44dp"/>

                    </LinearLayout>

                    <Spinner
                        android:id="@+id/edit_camera_mount_selection"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:gravity="start|center_vertical"/>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:orientation="horizontal">

                        <SeekBar
                            android:id="@+id/edit_camera_angle_seekbar"
                            android:layout_width="0sp"
                            android:layout_weight="7"
                            android:layout_height="match_parent"
                            />

                        <TextView
                            android:id="@+id/edit_camera_angle_text"
                            android:layout_width="0sp"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:textSize="24sp"
                            android:layout_height="44dp"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/edit_camera_timestamp_text"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:gravity="start|center_vertical"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/edit_camera_has_signage_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"/>

                        <TextView
                            android:id="@+id/edit_camera_signage_status"
                            android:layout_width="wrap_content"
                            android:gravity="center"
                            android:layout_height="match_parent"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/edit_camera_complete_signage_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"/>

                        <TextView
                            android:id="@+id/edit_camera_complete_signage_status"
                            android:layout_width="wrap_content"
                            android:gravity="center"
                            android:layout_height="match_parent"/>

                    </LinearLayout>




                    <EditText
                        android:id="@+id/camera_owner"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"/>


                </LinearLayout>

            </LinearLayout>

        </ScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/edit_camera_edit_button"
                android:text="@string/edit_button"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:layout_margin="5dp"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/edit_camera_take_picture_button"
                android:layout_width="0sp"
                android:src="@drawable/ic_camera_grey_24dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:layout_margin="5dp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/edit_camera_save_button"
                android:text="@string/save_button"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:layout_margin="5dp"
                />



        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>